# FileProcessor

./: .gitignore  LICENSE  README.md  og_notebook_cleaned.ipynb  pyproject.toml  requirements.txt
docs/: project-flow.md  project-understanding.md  technical-design.md
examples/online_retail_excel/: README.md  run_demo.py
examples/online_retail_excel/output/: online_retail_business_report.xlsx
file_automated_processing.egg-info/: SOURCES.txt  requires.txt
file_processor/: __init__.py  __main__.py  cleaning.py  cli.py  excel_builder.py  extractors.py  processor.py  tabular.py
file_processor/demos/: __init__.py  online_retail.py
file_processor/pipelines/: __init__.py  online_retail.py
test_files/: generate_source_files.py
test_files/outfiles/: client_alpha_growth_portfolio.47b2b34176.json  client_beta_balanced_portfolio.4679a1c2d0.json  client_carrington_income_portfolio.42eb3c2b2f.json  client_delta_edge_cases_portfolio.205bb9a786.json  client_evergreen_multi_account_portfolio.ed29d95282.json  processed_output.xlsx
test_files/srcfiles/: client_alpha_growth_portfolio.xlsx  client_beta_balanced_portfolio.xlsx  client_carrington_income_portfolio.xlsx  client_delta_edge_cases_portfolio.xlsx  client_evergreen_multi_account_portfolio.xlsx
tests/: test_online_retail_demo.py  test_processor.py
