[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-automated-processing"
version = "0.1.0"
description = "ETL-friendly file processing CLI for extracting normalized content from many file formats."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
]

[project.scripts]
file-process = "file_processor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
